// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.panelmatch.client.privatemembership;

option java_package = "org.wfanet.panelmatch.client.privatemembership";
option java_multiple_files = true;

// Hashes a single blinded joinkey
message PrepareQueryRequest {
  repeated bytes single_blinded_keys = 1;
  bytes identifier_hash_pepper = 2;
}

// Response of the PrepareQueryRequest method with keys hashed to a 64bit space
message PrepareQueryResponse {
  repeated fixed64 hashed_single_blinded_keys = 1;
}
